--- a/SWB4/swbp/nbproject/project.properties
+++ b/SWB4/swbp/nbproject/project.properties
@@ -54,7 +54,11 @@ javac.classpath=\
     ${file.reference.fr.opensagres.xdocreport.template.jar}:\
     ${file.reference.fr.opensagres.xdocreport.template.velocity.jar}:\
     ${file.reference.oro.jar}:\
-    ${file.reference.velocity.jar}
+    ${file.reference.velocity.jar}:\
+    ${reference.SWBBase.jar}:\
+    ${reference.SWBModel.jar}:\
+    ${reference.SWBPlatform.jar}:\
+    ${reference.SWBPortal.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -84,8 +88,16 @@ lib.dir=WEB-INF/lib
 no.dependencies=true
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.SWBBase=../swb/SWBBase
+project.SWBModel=../swb/SWBModel
+project.SWBPlatform=../swb/SWBPlatform
+project.SWBPortal=../swb/SWBPortal
 project.SWBProcess=../swb/SWBProcess
 project.SWBWebServices=../swb/SWBWebServices
+reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
+reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
+reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
+reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
 reference.SWBProcess.jar=${project.SWBProcess}/dist/SWBProcess.jar
 reference.SWBWebServices.jar=${project.SWBWebServices}/dist/SWBWebServices.jar
 resource.dir=setup
