Agregamos confirmacion CURP por WS

--- a/swbproys/BecasSEP/nbproject/project.properties
+++ b/swbproys/BecasSEP/nbproject/project.properties
@@ -26,6 +26,10 @@ dist.jar=${dist.dir}/BecasSEP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-fileupload-1.2.1.jar=../../swb/lib/commons-fileupload-1.2.1.jar
+file.reference.isorelax.jar=../../swb/lib/isorelax.jar
+file.reference.log4j-1.2.15.jar=../../swb/lib/log4j-1.2.15.jar
+file.reference.msv.jar=../../swb/lib/msv.jar
 file.reference.SWBBase.jar=../../swb/SWBBase/dist/SWBBase.jar
 file.reference.SWBModel.jar=../../swb/SWBModel/dist/SWBModel.jar
 file.reference.SWBPlatform.jar=../../swb/SWBPlatform/dist/SWBPlatform.jar
@@ -37,7 +41,11 @@ javac.classpath=\
     ${file.reference.SWBPlatform.jar}:\
     ${file.reference.SWBModel.jar}:\
     ${file.reference.SWBPortal.jar}:\
-    ${libs.javaee-api-6.0.classpath}
+    ${libs.javaee-api-6.0.classpath}:\
+    ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.isorelax.jar}:\
+    ${file.reference.msv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
