--- a/SWB4/swb/SWBPlatform/nbproject/project.properties
+++ b/SWB4/swb/SWBPlatform/nbproject/project.properties
@@ -49,7 +49,6 @@ jar.compress=true
 javac.classpath=\
     ${file.reference.hibernate3.jar}:\
     ${file.reference.arthurdo.jar}:\
-    ${reference.SWBBase.jar}:\
     ${file.reference.servlet.jar}:\
     ${file.reference.arq-2.8.5-sources.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
@@ -59,7 +58,8 @@ javac.classpath=\
     ${file.reference.sdb-1.3.2.jar}:\
     ${file.reference.tdb-0.8.7-sources.jar}:\
     ${file.reference.tdb-0.8.7.jar}:\
-    ${file.reference.slf4j-api-1.5.8.jar}
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${reference.SWBBase.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
