--- a/SWB4/swb/SWBBigDataInt/nbproject/project.properties
+++ b/SWB4/swb/SWBBigDataInt/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.arq-2.8.5.jar=../lib/arq-2.8.5.jar
-file.reference.bigdata-0.83.2-070211.jar=../lib_bigdata/bigdata-0.83.2-070211.jar
+file.reference.bigdata-1.0.1.jar=../lib_bigdata/bigdata-1.0.1.jar
 file.reference.colt-1.2.0.jar=../lib_bigdata/colt-1.2.0.jar
 file.reference.commons-fileupload-1.2.1.jar=../lib/commons-fileupload-1.2.1.jar
 file.reference.ctc_utils-5-4-2005.jar=../lib_bigdata/ctc_utils-5-4-2005.jar
@@ -52,7 +52,6 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.bigdata-0.83.2-070211.jar}:\
     ${file.reference.colt-1.2.0.jar}:\
     ${file.reference.ctc_utils-5-4-2005.jar}:\
     ${file.reference.cweb-extser-0.1-b2-dev.jar}:\
@@ -75,7 +74,8 @@ javac.classpath=\
     ${reference.SWBModel.jar}:\
     ${file.reference.iri-0.8.jar}:\
     ${file.reference.jena-2.6.3-sources.jar}:\
-    ${file.reference.jena-2.6.3.jar}
+    ${file.reference.jena-2.6.3.jar}:\
+    ${file.reference.bigdata-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
