--- a/SWB4/swb/SWBTripleStore/nbproject/project.properties
+++ b/SWB4/swb/SWBTripleStore/nbproject/project.properties
@@ -29,8 +29,13 @@ file.reference.arq-extra.jar=../lib/arq-extra.jar
 file.reference.commons-logging-1.1.1.jar=../lib/commons-logging-1.1.1.jar
 file.reference.concurrent.jar=../lib/concurrent.jar
 file.reference.gnu-crypto.jar=../lib/gnu-crypto.jar
+file.reference.hsqldb.jar=../lib/hsqldb.jar
+file.reference.icu4j-3.4.4.jar=../lib/icu4j-3.4.4.jar
+file.reference.iri-0.8.jar=../lib/iri-0.8.jar
 file.reference.jena-2.6.3-sources.jar=../lib/jena-2.6.3-sources.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
+file.reference.slf4j-api-1.5.8.jar=../lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-log4j12-1.5.8.jar=../lib/slf4j-log4j12-1.5.8.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -53,7 +58,12 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar}:\
+    ${file.reference.iri-0.8.jar}:\
+    ${file.reference.icu4j-3.4.4.jar}:\
+    ${file.reference.hsqldb.jar}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
