--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -31,7 +30,7 @@ file.reference.activation-1.0.2.jar=lib/activation-1.0.2.jar
 file.reference.antlrworks-1.4.jar=lib/antlrworks-1.4.jar
 file.reference.arq-2.8.5.jar=lib/arq-2.8.5.jar
 file.reference.arthurdo.jar=lib/arthurdo.jar
-file.reference.bigdata-0.83.2-070211.jar=lib_bigdata/bigdata-0.83.2-070211.jar
+file.reference.bigdata-1.0.1.jar=lib_bigdata/bigdata-1.0.1.jar
 file.reference.bliki-3.0.6.jar=lib/bliki-3.0.6.jar
 file.reference.bsh-core-2.0b4.jar=lib/bsh-core-2.0b4.jar
 file.reference.ChatServer.jar=lib\\ChatServer.jar
@@ -221,8 +220,8 @@ javac.classpath=\
     ${reference.SWBTripleStore.jar}:\
     ${file.reference.gnu-crypto.jar}:\
     ${file.reference.iText-rtf-2.1.5.jar}:\
-    ${file.reference.bigdata-0.83.2-070211.jar}:\
     ${file.reference.colt-1.2.0.jar}:\
+    ${file.reference.bigdata-1.0.1.jar}:\
     ${file.reference.ctc_utils-5-4-2005.jar}:\
     ${file.reference.cweb-extser-0.1-b2-dev.jar}:\
     ${file.reference.dsi-utils-1.0.6-020610.jar}:\
