--- a/swbproys/cptm/CPTMModel/nbproject/project.properties
+++ b/swbproys/cptm/CPTMModel/nbproject/project.properties
@@ -26,13 +26,18 @@ dist.jar=${dist.dir}/CPTM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.arthurdo.jar=D:\\webbuilder\\SWB4\\swb\\lib\\arthurdo.jar
+file.reference.arthurdo.jar-1=C:\\webbuilder\\SWB4\\swb\\lib\\arthurdo.jar
 file.reference.CPTMModel-src=src
 file.reference.jena-2.6.3-sources.jar=D:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3-sources.jar
 file.reference.jena-2.6.3-sources.jar-1=D:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3-sources.jar
+file.reference.jena-2.6.3-sources.jar-2=C:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3-sources.jar
 file.reference.jena-2.6.3.jar=D:\\webbuilder\\swb\\lib\\jena-2.6.3.jar
 file.reference.jena-2.6.3.jar-1=D:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3.jar
+file.reference.jena-2.6.3.jar-2=C:\\webbuilder\\SWB4\\swb\\lib\\jena-2.6.3.jar
 file.reference.json.jar=D:\\webbuilder\\SWB4\\swb\\lib\\json.jar
+file.reference.json.jar-1=C:\\webbuilder\\SWB4\\swb\\lib\\json.jar
 file.reference.servlet.jar=D:\\webbuilder\\SWB4\\swb\\lib\\servlet.jar
+file.reference.servlet.jar-1=C:\\webbuilder\\SWB4\\swb\\lib\\servlet.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +52,12 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${file.reference.json.jar}:\
     ${reference.SWBModel.jar}:\
-    ${file.reference.arthurdo.jar}
+    ${file.reference.arthurdo.jar}:\
+    ${file.reference.jena-2.6.3-sources.jar-2}:\
+    ${file.reference.jena-2.6.3.jar-2}:\
+    ${file.reference.servlet.jar-1}:\
+    ${file.reference.json.jar-1}:\
+    ${file.reference.arthurdo.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
