--- a/SWB4/swb/SWBBigDataInt/nbproject/project.properties
+++ b/SWB4/swb/SWBBigDataInt/nbproject/project.properties
@@ -44,8 +44,8 @@ file.reference.log4j-1.2.15.jar=../lib_bigdata/log4j-1.2.15.jar
 file.reference.lucene-analyzers-3.0.0.jar=../lib_bigdata/lucene-analyzers-3.0.0.jar
 file.reference.lucene-core-3.0.0.jar=../lib_bigdata/lucene-core-3.0.0.jar
 file.reference.openrdf-sesame-2.3.0-onejar.jar=../lib_bigdata/openrdf-sesame-2.3.0-onejar.jar
-file.reference.slf4j-api-1.4.3.jar=../lib_bigdata/slf4j-api-1.4.3.jar
-file.reference.slf4j-log4j12-1.4.3.jar=../lib_bigdata/slf4j-log4j12-1.4.3.jar
+file.reference.slf4j-api-1.5.8.jar=../lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-log4j12-1.5.8.jar=../lib/slf4j-log4j12-1.5.8.jar
 file.reference.xercesImpl-2.7.1.jar=../lib/xercesImpl-2.7.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -64,8 +64,6 @@ javac.classpath=\
     ${file.reference.lucene-analyzers-3.0.0.jar}:\
     ${file.reference.lucene-core-3.0.0.jar}:\
     ${file.reference.openrdf-sesame-2.3.0-onejar.jar}:\
-    ${file.reference.slf4j-api-1.4.3.jar}:\
-    ${file.reference.slf4j-log4j12-1.4.3.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
     ${file.reference.xercesImpl-2.7.1.jar}:\
@@ -75,7 +73,9 @@ javac.classpath=\
     ${file.reference.iri-0.8.jar}:\
     ${file.reference.jena-2.6.3-sources.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
-    ${file.reference.bigdata-1.0.1.jar}
+    ${file.reference.bigdata-1.0.1.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
