--- a/SWB4/swb/SWBTripleStore/test/db.properties
+++ b/SWB4/swb/SWBTripleStore/test/db.properties
@@ -60,7 +60,7 @@ jndi_pool=false
 
 drivers=org.hsqldb.jdbcDriver
 
-swb.url=jdbc:hsqldb:file:{apppath}/WEB-INF/db/hsqldb/swb
+swb.url=jdbc:hsqldb:file:{apppath}/data/hsqldb/swb
 swb.maxconn=50
 swb.user=SA
 swb.password=
