--- a/SWB4/swb/SWBTripleStore/test/web.properties
+++ b/SWB4/swb/SWBTripleStore/test/web.properties
@@ -136,7 +136,7 @@ swb/accessLogTime=300
 #***           - swbrts     (base de datos remota, s\u00f3lo en clientes, se usa en conjunci\u00f3n con swbts en el Admin)
 #***           - bigdata    (BigData, requiere incorporar bibliotecas de BigData y Sesame)
 #***********************************************************
-swb/triplepersist=swbts
+swb/triplepersist=bigdata
 
 #Direcci\u00f3n IP del servidor remoto para swbrts
 swb/tripleremoteserver=10.10.0.1
