--- a/SWB4/swb/SWBTripleStore/nbproject/project.properties
+++ b/SWB4/swb/SWBTripleStore/nbproject/project.properties
@@ -26,16 +26,26 @@ excludes=
 file.reference.arq-2.8.5-sources.jar=../lib/arq-2.8.5-sources.jar
 file.reference.arq-2.8.5.jar=../lib/arq-2.8.5.jar
 file.reference.arq-extra.jar=../lib/arq-extra.jar
+file.reference.bigdata-1.0.1.jar=../lib_bigdata/bigdata-1.0.1.jar
+file.reference.colt-1.2.0.jar=../lib_bigdata/colt-1.2.0.jar
 file.reference.commons-logging-1.1.1.jar=../lib/commons-logging-1.1.1.jar
 file.reference.concurrent.jar=../lib/concurrent.jar
+file.reference.ctc_utils-5-4-2005.jar=../lib_bigdata/ctc_utils-5-4-2005.jar
+file.reference.cweb-extser-0.1-b2-dev.jar=../lib_bigdata/cweb-extser-0.1-b2-dev.jar
+file.reference.dsi-utils-1.0.6-020610.jar=../lib_bigdata/dsi-utils-1.0.6-020610.jar
+file.reference.fastutil-5.1.5.jar=../lib_bigdata/fastutil-5.1.5.jar
 file.reference.gnu-crypto.jar=../lib/gnu-crypto.jar
+file.reference.high-scale-lib-v1.1.2.jar=../lib_bigdata/high-scale-lib-v1.1.2.jar
 file.reference.hsqldb.jar=../lib/hsqldb.jar
 file.reference.icu4j-3.4.4.jar=../lib/icu4j-3.4.4.jar
 file.reference.iri-0.8.jar=../lib/iri-0.8.jar
 file.reference.jena-2.6.3-sources.jar=../lib/jena-2.6.3-sources.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
-file.reference.slf4j-api-1.5.8.jar=../lib/slf4j-api-1.5.8.jar
-file.reference.slf4j-log4j12-1.5.8.jar=../lib/slf4j-log4j12-1.5.8.jar
+file.reference.lgpl-utils-1.0.6-020610.jar=../lib_bigdata/lgpl-utils-1.0.6-020610.jar
+file.reference.log4j-1.2.15.jar=../lib_bigdata/log4j-1.2.15.jar
+file.reference.lucene-analyzers-3.0.0.jar=../lib_bigdata/lucene-analyzers-3.0.0.jar
+file.reference.lucene-core-3.0.0.jar=../lib_bigdata/lucene-core-3.0.0.jar
+file.reference.openrdf-sesame-2.3.0-onejar.jar=../lib_bigdata/openrdf-sesame-2.3.0-onejar.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -59,11 +69,22 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-log4j12-1.5.8.jar}:\
     ${file.reference.iri-0.8.jar}:\
     ${file.reference.icu4j-3.4.4.jar}:\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar}:\
+    ${reference.SWBBigDataInt.jar}:\
+    ${file.reference.bigdata-1.0.1.jar}:\
+    ${file.reference.colt-1.2.0.jar}:\
+    ${file.reference.ctc_utils-5-4-2005.jar}:\
+    ${file.reference.cweb-extser-0.1-b2-dev.jar}:\
+    ${file.reference.dsi-utils-1.0.6-020610.jar}:\
+    ${file.reference.fastutil-5.1.5.jar}:\
+    ${file.reference.high-scale-lib-v1.1.2.jar}:\
+    ${file.reference.lgpl-utils-1.0.6-020610.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.lucene-analyzers-3.0.0.jar}:\
+    ${file.reference.lucene-core-3.0.0.jar}:\
+    ${file.reference.openrdf-sesame-2.3.0-onejar.jar}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -80,9 +101,11 @@ no.dependencies=true
 platform.active=default_platform
 project.SWBBase=../SWBBase
 project.SWBBase-1=../../../SWB4/swb/SWBBase
+project.SWBBigDataInt=../SWBBigDataInt
 project.SWBPlatform=../SWBPlatform
 reference.SWBBase-1.jar=${project.SWBBase-1}/dist/SWBBase.jar
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
+reference.SWBBigDataInt.jar=${project.SWBBigDataInt}/dist/SWBBigDataInt.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 run.classpath=\
     ${javac.classpath}:\
