biblioteca faltante en el proyecto

--- a/swbproys/BecasSEP/nbproject/project.properties
+++ b/swbproys/BecasSEP/nbproject/project.properties
@@ -28,6 +28,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=../../swb/lib/commons-fileupload-1.2.1.jar
 file.reference.isorelax.jar=../../swb/lib/isorelax.jar
+file.reference.jena-2.6.3.jar=../../swb/lib/jena-2.6.3.jar
 file.reference.log4j-1.2.15.jar=../../swb/lib/log4j-1.2.15.jar
 file.reference.msv.jar=../../swb/lib/msv.jar
 file.reference.SWBBase.jar=../../swb/SWBBase/dist/SWBBase.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.isorelax.jar}:\
-    ${file.reference.msv.jar}
+    ${file.reference.msv.jar}:\
+    ${file.reference.jena-2.6.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
