--- a/swbproys/BecasSEP/nbproject/project.properties
+++ b/swbproys/BecasSEP/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.jar=${dist.dir}/BecasSEP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.arq-2.8.5.jar=../../swb/lib/arq-2.8.5.jar
 file.reference.commons-fileupload-1.2.1.jar=../../swb/lib/commons-fileupload-1.2.1.jar
 file.reference.isorelax.jar=../../swb/lib/isorelax.jar
 file.reference.jena-2.6.3.jar=../../swb/lib/jena-2.6.3.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.isorelax.jar}:\
     ${file.reference.msv.jar}:\
-    ${file.reference.jena-2.6.3.jar}
+    ${file.reference.jena-2.6.3.jar}:\
+    ${file.reference.arq-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
