--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -139,7 +139,7 @@ swb/accessLogTime=300
 swb/triplepersist=swbts
 
 #Direcci\u00f3n IP del servidor remoto para swbrts
-swb/tripleremoteserver=10.10.0.1
+swb/tripleremoteserver=localhost
 
 #Puerto del servidor remoto para swbrts
 swb/tripleremoteport=6666
