Se agregó configuración para detalle de propiedades a editar

--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource.properties
@@ -15,12 +15,12 @@ statmsg1=Se agrego correctamente el elemento.
 statmsg2=Se elimin\u00f3 correctamente el elemento.
 searchInProperties=Buscar en propiedades seleccionadas
 btnReload=Recargar
-erroMsgConfig=Error en la configuraci\u00f3n de la colecci\u00f3n
+erroMsgConfig=Error en la configuraci\u00f3n del catalogo
 msgMissingConfigClass=Falta configurar y/o seleccionar la clase de la colecci\u00f3n
-msgConfigInstructions=Regresa a la pesta\u00f1a de informaci\u00f3n de la colecci\u00f3n, selecciona la clase y guarda los cambio.
+msgConfigInstructions=Regresa a la pesta\u00f1a de informaci\u00f3n del catalogo, selecciona la clase y guarda los cambios.
 btnConfig=Configurar
 errorMsgConfig=Configuraci\u00f3n de propiedades
-msgMissingConfigProperties=Falta configuraci\u00f3n de despliegue de la collecci\u00f3n.
+msgMissingConfigProperties=Falta configuraci\u00f3n de despliegue del catalogo.
 btnAdd2display=Agregar a despliegue
 btnAdd2search=Agregar a b\u00fasqueda
 btnAdd2both=Agregar a ambos
@@ -32,3 +32,6 @@ btnSave=Guardar
 btn_updt=Actualizar
 up=subir
 down=bajar
+btnAdd2detail=Agregar a detalle
+th_MODE_VIEW=Modo propiedad
+th_FOR_CREATE=Mostrar en creaci\u00f3n
