--- a/SWB4/swb/SWBPortal/nbproject/project.properties
+++ b/SWB4/swb/SWBPortal/nbproject/project.properties
@@ -99,7 +99,8 @@ javac.classpath=\
     ${file.reference.gdata-youtube-2.0.jar}:\
     ${file.reference.gdata-media-1.0.jar}:\
     ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
-    ${file.reference.fckeditor-java-core-2.4.1.jar}
+    ${file.reference.fckeditor-java-core-2.4.1.jar}:\
+    ${reference.SWBTripleStore.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -137,10 +138,12 @@ project.SWBBase=../SWBBase
 project.SWBModel=../SWBModel
 project.SWBNLP=../SWBNLP
 project.SWBPlatform=../SWBPlatform
+project.SWBTripleStore=../SWBTripleStore
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBNLP.jar=${project.SWBNLP}/dist/SWBNLP.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
+reference.SWBTripleStore.jar=${project.SWBTripleStore}/dist/SWBTripleStore.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
