--- a/SWB4/swb/SWBTripleStore/nbproject/project.properties
+++ b/SWB4/swb/SWBTripleStore/nbproject/project.properties
@@ -50,14 +50,14 @@ includes=**
 jar.compress=true
 javac.classpath=\
     ${reference.SWBBase-1.jar}:\
-    ${reference.SWBPlatform.jar}:\
     ${file.reference.arq-2.8.5-sources.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.concurrent.jar}:\
     ${file.reference.jena-2.6.3-sources.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
-    ${file.reference.gnu-crypto.jar}
+    ${file.reference.gnu-crypto.jar}:\
+    ${reference.SWBPlatform.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -97,6 +97,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 no.dependencies=true
 platform.active=default_platform
 project.SWBBase=../SWBBase
