--- a/SWB4/swb/src/java/logging.properties
+++ b/SWB4/swb/src/java/logging.properties
@@ -1,6 +1,6 @@
 #log4j.rootLogger=info, stdout, file
 #log4j.rootLogger=error, stdout
-log4j.rootLogger=error, stdout, file
+log4j.rootLogger=error, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -15,8 +15,8 @@ log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %p - %m%n
 
-log4j.logger.org.semanticwb=error
-log4j.logger.com.hp.hpl.jena.db.impl=debug
+#log4j.logger.org.semanticwb=error
+#log4j.logger.com.hp.hpl.jena.db.impl=error
 
 #%5p [%t] (%F:%L) - %m%n
 #TRACE [PoolThread-4] (Logger4jImpl.java:35) - VirtualHostFilter:doFilter()
