--- a/SWB4/swb/src/java/db.properties
+++ b/SWB4/swb/src/java/db.properties
@@ -51,7 +51,7 @@ jndi_pool=false
 
 drivers=org.hsqldb.jdbcDriver
 
-swb.url=jdbc:hsqldb:mem:swbmemdb
+#swb.url=jdbc:hsqldb:mem:swbmemdb
 swb.url=jdbc:hsqldb:file:{apppath}/WEB-INF/db/hsqldb/swb
 swb.maxconn=80
 swb.user=SA
