--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ProcessFileRepository.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/ProcessFileRepository.properties
@@ -324,3 +324,4 @@ msgBTNUpdate=Actualizar
 mustBeSigned=Debes de estar firmado para utilizar el repositorio de documentos.
 btnBack=Regresar
 msgNextVersion=Siguiente versi\u00f3n
+msgValidFiles=Extensiones de archivos validos separados por '|'
