--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -95,6 +95,9 @@ swb/smtpServer=webmail.infotec.com.mx
 #swb/smtpUser=usuario
 #swb/smtpPassword=password
 
+#Email de administraci\u00f3n
+af/adminEmail=webbuilder@infotec.com.mx
+
 #Periodo de tiempo en segundos entre cada sincronizaci\u00f3n con db
 swb/syncTime=10
 
