--- a/SWB4/Client/XMRPCServer/nbproject/project.properties
+++ b/SWB4/Client/XMRPCServer/nbproject/project.properties
@@ -24,14 +24,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jdom.jar=../../swb/lib/jdom.jar
-file.reference.servlet.jar=../../swb/lib/servlet.jar
+file.reference.servlet-api.jar=../../swb/lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBXMLRPCCommon.jar}:\
     ${file.reference.jdom.jar}:\
-    ${file.reference.servlet.jar}
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation -Xlint:unchecked
 javac.deprecation=false
