--- a/SWB4/swb/WB3Compatibility/nbproject/project.properties
+++ b/SWB4/swb/WB3Compatibility/nbproject/project.properties
@@ -29,7 +29,7 @@ excludes=
 file.reference.arthurdo.jar=../lib/arthurdo.jar
 file.reference.mail-1.3.3.jar=../lib/mail-1.3.3.jar
 file.reference.ojmail.jar=../lib/ojmail.jar
-file.reference.servlet.jar=../lib/servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.WB3Compatibility-src=src
 file.reference.WB3Compatibility-test=test
 file.reference.xalan.jar=../lib/xalan.jar
@@ -42,8 +42,8 @@ javac.classpath=\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBBase.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.ojmail.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.mail-1.3.3.jar}:\
     ${file.reference.xalan.jar}:\
     ${file.reference.arthurdo.jar}
