--- a/SWB4/swb/SWBSemanticFileRepository/nbproject/project.properties
+++ b/SWB4/swb/SWBSemanticFileRepository/nbproject/project.properties
@@ -27,7 +27,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcr-1.0.jar=..\\lib\\jcr-1.0.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.xalan.jar=..\\lib\\xalan.jar
 file.reference.xercesImpl-2.7.1.jar=../lib/xercesImpl-2.7.1.jar
 file.reference.xml-apis.jar=..\\lib\\xml-apis.jar
@@ -41,8 +41,8 @@ javac.classpath=\
     ${reference.SWBModel.jar}:\
     ${reference.SWBBase.jar}:\
     ${reference.SWBJCR170.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.jcr-1.0.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.xercesImpl-2.7.1.jar}:\
     ${file.reference.jena-2.6.3.jar}
 # Space-separated list of extra javac options
