--- a/SWB4/swb/SWBSearch/nbproject/project.properties
+++ b/SWB4/swb/SWBSearch/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.poi-3.5-FINAL-20090928.jar=../lib/poi-3.5-FINAL-20090928.jar
 file.reference.poi-contrib-3.5-FINAL-20090928.jar=../lib/poi-contrib-3.5-FINAL-20090928.jar
 file.reference.poi-ooxml-3.5-FINAL-20090928.jar=../lib/poi-ooxml-3.5-FINAL-20090928.jar
 file.reference.poi-scratchpad-3.5-FINAL-20090928.jar=../lib/poi-scratchpad-3.5-FINAL-20090928.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.xalan.jar=..\\lib\\xalan.jar
 file.reference.xercesImpl-2.7.1.jar=../lib/xercesImpl-2.7.1.jar
 file.reference.xml-apis.jar=..\\lib\\xml-apis.jar
@@ -57,8 +57,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.5-FINAL-20090928.jar}:\
     ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
     ${file.reference.xmlbeans-2.3.0.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.jena-2.6.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
