--- a/SWB4/swb/SWBProcess/nbproject/project.properties
+++ b/SWB4/swb/SWBProcess/nbproject/project.properties
@@ -45,7 +45,7 @@ file.reference.poi-3.7-20101029.jar=..\\lib\\poi-3.7-20101029.jar
 file.reference.poi-ooxml-3.7-20101029.jar=..\\lib\\poi-ooxml-3.7-20101029.jar
 file.reference.poi-ooxml-schemas-3.7-20101029.jar=..\\lib\\poi-ooxml-schemas-3.7-20101029.jar
 file.reference.poi-scratchpad-3.7-20101029.jar=..\\lib\\poi-scratchpad-3.7-20101029.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.velocity.jar=../../swbp/libext/velocity.jar
 file.reference.xmlbeans-2.3.0.jar=..\\lib\\xmlbeans-2.3.0.jar
 includes=**
@@ -55,8 +55,8 @@ javac.classpath=\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.json.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
     ${file.reference.bsh-core-2.0b4.jar}:\
     ${file.reference.iText-2.1.5.jar}:\
