--- a/SWB4/swb/SWBPortlet-shared/nbproject/project.properties
+++ b/SWB4/swb/SWBPortlet-shared/nbproject/project.properties
@@ -26,12 +26,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.portlet-api-2.0.jar=../lib/portlet-api-2.0.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.servlet.jar}:\
     ${file.reference.portlet-api-2.0.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBModel.jar}
 # Space-separated list of extra javac options
