--- a/SWB4/swb/SWBPlatform/nbproject/project.properties
+++ b/SWB4/swb/SWBPlatform/nbproject/project.properties
@@ -38,7 +38,7 @@ file.reference.mysql-connector-java-5.0.3-bin.jar=..\\lib\\mysql-connector-java-
 file.reference.PDFBox-0.7.3.jar=..\\lib\\PDFBox-0.7.3.jar
 file.reference.sdb-1.3.2-sources.jar=../lib/sdb-1.3.2-sources.jar
 file.reference.sdb-1.3.2.jar=../lib/sdb-1.3.2.jar
-file.reference.servlet.jar=../lib/servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.slf4j-api-1.5.8.jar=..\\lib\\slf4j-api-1.5.8.jar
 file.reference.slf4j-log4j12-1.5.8.jar=../lib/slf4j-log4j12-1.5.8.jar
 file.reference.tdb-0.8.7-sources.jar=../lib/tdb-0.8.7-sources.jar
@@ -49,8 +49,8 @@ jar.compress=true
 javac.classpath=\
     ${file.reference.hibernate3.jar}:\
     ${file.reference.arthurdo.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.arq-2.8.5-sources.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
     ${file.reference.jena-2.6.3-sources.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
