--- a/SWB4/swb/SWBOpenSocial/nbproject/project.properties
+++ b/SWB4/swb/SWBOpenSocial/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.jdom.jar=..\\lib\\jdom.jar
 file.reference.jena-2.6.3.jar=..\\lib\\jena-2.6.3.jar
 file.reference.json.jar=..\\lib\\json.jar
 file.reference.log4j-1.2.15.jar=..\\lib\\log4j-1.2.15.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.xercesImpl-2.7.1.jar=..\\lib\\xercesImpl-2.7.1.jar
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.classpath=\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBModel.jar}:\
     ${file.reference.jdom.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.jaxen-jdom.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.json.jar}:\
     ${file.reference.arthurdo.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
