--- a/SWB4/swb/SWBOffice/nbproject/project.properties
+++ b/SWB4/swb/SWBOffice/nbproject/project.properties
@@ -28,14 +28,14 @@ excludes=
 file.reference.arthurdo.jar=..\\lib\\arthurdo.jar
 file.reference.jcr-1.0.jar=..\\lib\\jcr-1.0.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${file.reference.servlet.jar}:\
     ${reference.SWBPortal.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${reference.SWBModel.jar}:\
     ${file.reference.jcr-1.0.jar}:\
     ${reference.SWBJCR170.jar}:\
