--- a/SWB4/swb/SWBModel/nbproject/project.properties
+++ b/SWB4/swb/SWBModel/nbproject/project.properties
@@ -28,17 +28,17 @@ file.reference.icu4j-3.4.4.jar=../lib/icu4j-3.4.4.jar
 file.reference.iri-0.8.jar=../lib/iri-0.8.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
 file.reference.sdb-1.3.2.jar=../lib/sdb-1.3.2.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.slf4j-api-1.5.8.jar=../lib/slf4j-api-1.5.8.jar
 file.reference.slf4j-log4j12-1.5.8.jar=../lib/slf4j-log4j12-1.5.8.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.servlet.jar}:\
     ${reference.SWBBase.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
-    ${file.reference.arq-2.8.5.jar}
+    ${file.reference.arq-2.8.5.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
