--- a/SWB4/swb/SWBBase/nbproject/project.properties
+++ b/SWB4/swb/SWBBase/nbproject/project.properties
@@ -39,7 +39,7 @@ file.reference.PDFBox-0.7.3.jar=../lib/PDFBox-0.7.3.jar
 file.reference.poi-3.5-FINAL-20090928.jar=../lib/poi-3.5-FINAL-20090928.jar
 file.reference.poi-ooxml-3.5-FINAL-20090928.jar=../lib/poi-ooxml-3.5-FINAL-20090928.jar
 file.reference.serializer.jar=../lib/serializer.jar
-file.reference.servlet.jar=../lib/servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.xalan.jar=../lib/xalan.jar
 file.reference.xercesImpl-2.7.1.jar=../lib/xercesImpl-2.7.1.jar
 file.reference.xml-apis.jar=../lib/xml-apis.jar
@@ -65,7 +65,7 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.3.0.jar}:\
     ${file.reference.PDFBox-0.7.3.jar}:\
     ${file.reference.xercesImpl-2.7.1.jar}:\
-    ${file.reference.servlet.jar}
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
