--- a/SWB4/swb/SWBCommunity/nbproject/project.properties
+++ b/SWB4/swb/SWBCommunity/nbproject/project.properties
@@ -34,7 +34,7 @@ file.reference.lucene-analyzers-2.4.1.jar=../lib/lucene-analyzers-2.4.1.jar
 file.reference.lucene-core-2.4.1.jar=../lib/lucene-core-2.4.1.jar
 file.reference.lucene-snowball-2.4.1.jar=../lib/lucene-snowball-2.4.1.jar
 file.reference.mail-1.3.3.jar=..\\lib\\mail-1.3.3.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,8 +43,8 @@ javac.classpath=\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBSearch.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.mail-1.3.3.jar}:\
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}:\
