--- a/SWB4/swb/SWBNLP/nbproject/project.properties
+++ b/SWB4/swb/SWBNLP/nbproject/project.properties
@@ -59,7 +59,7 @@ file.reference.lucene-core-2.4.1.jar=../lib/lucene-core-2.4.1.jar
 file.reference.lucene-snowball-2.4.1.jar=../lib/lucene-snowball-2.4.1.jar
 file.reference.lucene-spellchecker-2.4.1.jar=../lib/lucene-spellchecker-2.4.1.jar
 file.reference.mail-1.3.3.jar=..\\lib\\mail-1.3.3.jar
-file.reference.servlet.jar=..\\lib\\servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.spring-sources.jar=..\\lib\\spring-sources.jar
 file.reference.spring.jar=..\\lib\\spring.jar
 file.reference.xalan.jar=..\\lib\\xalan.jar
@@ -114,8 +114,8 @@ javac.test.classpath=\
     ${file.reference.json.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.mail-1.3.3.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.spring-sources.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.spring.jar}:\
     ${file.reference.xalan.jar}:\
     ${file.reference.xml-apis.jar}:\
