--- a/SWB4/swb/SWB3Resources/nbproject/project.properties
+++ b/SWB4/swb/SWB3Resources/nbproject/project.properties
@@ -26,7 +26,7 @@ excludes=
 file.reference.arthurdo.jar=../lib/arthurdo.jar
 file.reference.mail-1.3.3.jar=..\\lib\\mail-1.3.3.jar
 file.reference.ojdbc14-10.2.0.4.jar=../lib/ojdbc14-10.2.0.4.jar
-file.reference.servlet.jar=../lib/servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -34,8 +34,8 @@ javac.classpath=\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${file.reference.servlet.jar}:\
     ${file.reference.mail-1.3.3.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.arthurdo.jar}:\
     ${reference.SWBTOWB3Compatibility.jar}:\
     ${file.reference.ojdbc14-10.2.0.4.jar}
