--- a/SWB4/swb/SWBPortal/nbproject/project.properties
+++ b/SWB4/swb/SWBPortal/nbproject/project.properties
@@ -39,7 +39,7 @@ file.reference.gdata-blogger-2.0.jar=../lib/gdata-blogger-2.0.jar
 file.reference.gdata-client-1.0.jar=../lib/gdata-client-1.0.jar
 file.reference.gdata-core-1.0.jar=../lib/gdata-core-1.0.jar
 file.reference.gdata-media-1.0.jar=../lib/gdata-media-1.0.jar
-file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
+file.reference.gdata-youtube-2.0.jar=../lib/gdata-youtube-2.0.jar
 file.reference.gnu-regexp.jar=../lib/gnu-regexp.jar
 file.reference.groovy-all-1.6.3.jar=../lib/groovy-all-1.6.3.jar
 file.reference.isorelax.jar=../lib/isorelax.jar
@@ -56,8 +56,8 @@ file.reference.PDFBox-0.7.3.jar=../lib/PDFBox-0.7.3.jar
 file.reference.poi-3.5-FINAL-20090928.jar=../lib/poi-3.5-FINAL-20090928.jar
 file.reference.poi-scratchpad-3.5-FINAL-20090928.jar=..\\lib\\poi-scratchpad-3.5-FINAL-20090928.jar
 file.reference.portlet-api-2.0.jar=../lib/portlet-api-2.0.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.servlet.jar=../lib/servlet.jar
-file.reference.servlet.jar-1=../lib/servlet.jar
 file.reference.twitter4j-2.0.9.jar=../lib/twitter4j-2.0.9.jar
 includes=**
 jar.compress=true
@@ -72,7 +72,6 @@ javac.classpath=\
     ${file.reference.isorelax.jar}:\
     ${file.reference.gnu-regexp.jar}:\
     ${file.reference.PDFBox-0.7.3.jar}:\
-    ${file.reference.servlet.jar-1}:\
     ${file.reference.mail-1.3.3.jar}:\
     ${file.reference.bliki-3.0.6.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
@@ -93,14 +92,15 @@ javac.classpath=\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.groovy-all-1.6.3.jar}:\
     ${file.reference.twitter4j-2.0.9.jar}:\
+    ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
+    ${file.reference.fckeditor-java-core-2.4.1.jar}:\
+    ${reference.SWBTripleStore.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.gdata-blogger-2.0.jar}:\
     ${file.reference.gdata-client-1.0.jar}:\
     ${file.reference.gdata-core-1.0.jar}:\
-    ${file.reference.gdata-youtube-2.0.jar}:\
     ${file.reference.gdata-media-1.0.jar}:\
-    ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
-    ${file.reference.fckeditor-java-core-2.4.1.jar}:\
-    ${reference.SWBTripleStore.jar}
+    ${file.reference.gdata-youtube-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
