--- a/SWB4/swb/SWBRestLibrary/nbproject/project.properties
+++ b/SWB4/swb/SWBRestLibrary/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.log4j-1.2.15.jar=..\\lib\\log4j-1.2.15.jar
 file.reference.msv.jar=..\\lib\\msv.jar
 file.reference.saxpath.jar=..\\lib\\saxpath.jar
 file.reference.sdb-1.3.2.jar=..\\lib\\sdb-1.3.2.jar
-file.reference.servlet.jar=../lib/servlet.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.slf4j-api-1.5.8.jar=..\\lib\\slf4j-api-1.5.8.jar
 file.reference.slf4j-log4j12-1.5.6.jar=..\\lib\\slf4j-log4j12-1.5.6.jar
 file.reference.slf4j-log4j12-1.5.8.jar=..\\lib\\slf4j-log4j12-1.5.8.jar
@@ -59,8 +59,8 @@ javac.classpath=\
     ${file.reference.isorelax.jar}:\
     ${file.reference.msv.jar}:\
     ${file.reference.xalan.jar}:\
-    ${file.reference.servlet.jar}:\
     ${reference.SWBPlatform.jar}:\
+    ${file.reference.servlet-api.jar}:\
     ${file.reference.jena-2.6.2.jar}:\
     ${file.reference.jdom.jar}:\
     ${file.reference.jaxen-jdom.jar}:\
