--- a/SWB4/WB3Migration/nbproject/project.properties
+++ b/SWB4/WB3Migration/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -62,7 +61,6 @@ file.reference.groovy-all-1.6.3.jar=../swb/build/web/WEB-INF/lib/groovy-all-1.6.
 file.reference.hibernate3.jar=../swb/build/web/WEB-INF/lib/hibernate3.jar
 file.reference.hsqldb.jar=WEB-INF/lib/hsqldb.jar
 file.reference.hsqldb.jar-1=../swb/build/web/WEB-INF/lib/hsqldb.jar
-file.reference.icu4j-3.4.4.jar=../swb/build/web/WEB-INF/lib/icu4j-3.4.4.jar
 file.reference.informix.jar=WEB-INF/lib/informix.jar
 file.reference.iri-0.8.jar=../swb/build/web/WEB-INF/lib/iri-0.8.jar
 file.reference.isorelax.jar=WEB-INF/lib/isorelax.jar
@@ -132,7 +130,6 @@ file.reference.SWBOfficeComunicationInterfaces.jar=../swb/build/web/WEB-INF/lib/
 file.reference.SWBPlatform.jar=../swb/build/web/WEB-INF/lib/SWBPlatform.jar
 file.reference.SWBPortal.jar=../swb/build/web/WEB-INF/lib/SWBPortal.jar
 file.reference.SWBPortlet.jar=../swb/build/web/WEB-INF/lib/SWBPortlet.jar
-file.reference.SWBProcess.jar=../swb/build/web/WEB-INF/lib/SWBProcess.jar
 file.reference.SWBRepositoryManager.jar=../swb/build/web/WEB-INF/lib/SWBRepositoryManager.jar
 file.reference.SWBSearch.jar=../swb/build/web/WEB-INF/lib/SWBSearch.jar
 file.reference.SWBSemanticFileRepository.jar=../swb/build/web/WEB-INF/lib/SWBSemanticFileRepository.jar
@@ -158,10 +155,11 @@ file.reference.xercesImpl-2.7.1.jar=../swb/build/web/WEB-INF/lib/xercesImpl-2.7.
 file.reference.xml-apis.jar=../swb/build/web/WEB-INF/lib/xml-apis.jar
 file.reference.xmlbeans-2.3.0.jar=../swb/build/web/WEB-INF/lib/xmlbeans-2.3.0.jar
 includes=**
+j2ee.compile.on.save=false
 j2ee.deploy.on.save=false
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}\\lib\\annotations-api.jar:${j2ee.server.home}\\lib\\catalina-ant.jar:${j2ee.server.home}\\lib\\catalina-ha.jar:${j2ee.server.home}\\lib\\catalina-tribes.jar:${j2ee.server.home}\\lib\\catalina.jar:${j2ee.server.home}\\lib\\el-api.jar:${j2ee.server.home}\\lib\\jasper-el.jar:${j2ee.server.home}\\lib\\jasper.jar:${j2ee.server.home}\\lib\\jsp-api.jar:${j2ee.server.home}\\lib\\servlet-api.jar:${j2ee.server.home}\\lib\\tomcat-coyote.jar:${j2ee.server.home}\\lib\\tomcat-dbcp.jar:${j2ee.server.home}\\lib\\tomcat-i18n-es.jar:${j2ee.server.home}\\lib\\tomcat-i18n-fr.jar:${j2ee.server.home}\\lib\\tomcat-i18n-ja.jar:${j2ee.server.home}\\bin\\tomcat-juli.jar
-j2ee.server.type=Tomcat60
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.6.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
@@ -275,13 +273,12 @@ javac.classpath=\
     ${file.reference.SWBBase.jar}:\
     ${file.reference.SWBCommunity.jar}:\
     ${file.reference.SWBJCR170.jar}:\
-    ${file.reference.SWBModel.jar}:\
     ${file.reference.SWBNLP.jar}:\
+    ${file.reference.SWBModel.jar}:\
     ${file.reference.SWBOfficeComunicationInterfaces.jar}:\
     ${file.reference.SWBPlatform.jar}:\
     ${file.reference.SWBPortal.jar}:\
     ${file.reference.SWBPortlet.jar}:\
-    ${file.reference.SWBProcess.jar}:\
     ${file.reference.SWBRepositoryManager.jar}:\
     ${file.reference.SWBSearch.jar}:\
     ${file.reference.SWBSemanticFileRepository.jar}:\
@@ -291,7 +288,6 @@ javac.classpath=\
     ${file.reference.xalan.jar-1}:\
     ${file.reference.xml-apis.jar}:\
     ${file.reference.xmlbeans-2.3.0.jar}:\
-    ${file.reference.icu4j-3.4.4.jar}:\
     ${file.reference.iri-0.8.jar}:\
     ${file.reference.SWBOffice.jar}:\
     ${file.reference.WBOffice.jar}
@@ -326,7 +322,7 @@ jspcompilation.classpath=${jspc.classpath}:${javac.classpath}
 lib.dir=WEB-INF/lib
 no.dependencies=true
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.5
+platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
