--- a/SWB4/swbp/lib/nblibraries.properties
+++ b/SWB4/swbp/lib/nblibraries.properties
@@ -6,3 +6,18 @@ libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/webservices-api-osgi.jar
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.jsp-compilation-syscp.classpath=\
+    ${base}/jsp-compilation-syscp/ant.jar:\
+    ${base}/jsp-compilation-syscp/servlet3.0-jsp2.2-api.jar:\
+    ${base}/jsp-compilation-syscp/glassfish-jspparser-3.0.jar:\
+    ${base}/jsp-compilation-syscp/standard.jar:\
+    ${base}/jsp-compilation-syscp/jsf-impl.jar
+libs.jsp-compilation.classpath=\
+    ${base}/jsp-compilation/ant.jar:\
+    ${base}/jsp-compilation/servlet3.0-jsp2.2-api.jar:\
+    ${base}/jsp-compilation/glassfish-jspparser-3.0.jar:\
+    ${base}/jsp-compilation/jsf-api.jar:\
+    ${base}/jsp-compilation/jstl.jar:\
+    ${base}/jsp-compilation/ant-launcher.jar
+libs.jsp-compiler.classpath=\
+    ${base}/jsp-compiler/jspcompile.jar
