--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -230,7 +231,8 @@ javac.classpath=\
     ${file.reference.icu4j-3_6.jar}:\
     ${file.reference.lgpl-utils-1.0.6-020610.jar}:\
     ${file.reference.openrdf-sesame-2.3.0-onejar.jar}:\
-    ${reference.SWBBigDataInt.jar}
+    ${reference.SWBBigDataInt.jar}:\
+    ${reference.ITZModel.jar}
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}
 # Space-separated list of extra javac options
@@ -265,6 +267,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=true
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.ITZModel=../../proys/ver/ITZModel
 project.SWB3Resources=SWB3Resources
 project.SWBAdmin=SWBAdmin
 project.SWBBase=SWBBase
@@ -287,6 +290,7 @@ project.SWBTOWB3Compatibility=WB3Compatibility
 project.SWBTripleStore=SWBTripleStore
 project.SWBXMLRPCCommon=../Client/XMLRPCCommon
 project.SWBXMRPCServer=../Client/XMRPCServer
+reference.ITZModel.jar=${project.ITZModel}/dist/ITZModel.jar
 reference.SWB3Resources.jar=${project.SWB3Resources}/dist/SWB3Resources.jar
 reference.SWBAdmin.jar=${project.SWBAdmin}/dist/SWBAdmin.jar
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
