--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -25,6 +25,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/Eworkplace.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-fileupload-1.2.1.jar=lib\\commons-fileupload-1.2.1.jar
+file.reference.jena-2.6.3.jar=lib\\jena-2.6.3.jar
 file.reference.servlet.jar=lib\\servlet.jar
 includes=**
 jar.compress=false
@@ -33,7 +35,10 @@ javac.classpath=\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBModel.jar}:\
-    ${file.reference.servlet.jar}
+    ${file.reference.servlet.jar}:\
+    ${file.reference.jena-2.6.3.jar}:\
+    ${reference.SWBCommunity.jar}:\
+    ${file.reference.commons-fileupload-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,10 +66,12 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
 project.SWBBase=../../SWB4/swb/SWBBase
+project.SWBCommunity=../../SWB4/swb/SWBCommunity
 project.SWBModel=../../SWB4/swb/SWBModel
 project.SWBPlatform=../../SWB4/swb/SWBPlatform
 project.SWBPortal=../../SWB4/swb/SWBPortal
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
+reference.SWBCommunity.jar=${project.SWBCommunity}/dist/SWBCommunity.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
