--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -89,6 +88,7 @@ file.reference.lucene-core-2.4.1.jar=lib/lucene-core-2.4.1.jar
 file.reference.lucene-snowball-2.4.1.jar=lib/lucene-snowball-2.4.1.jar
 file.reference.lucene-spellchecker-2.4.1.jar=lib/lucene-spellchecker-2.4.1.jar
 file.reference.mail-1.3.3.jar=lib/mail-1.3.3.jar
+file.reference.mongo-2.7.0.jar=lib/mongodb/mongo-2.7.0.jar
 file.reference.msv.jar=lib/msv.jar
 file.reference.mysql-connector-java-5.0.3-bin.jar=lib/mysql-connector-java-5.0.3-bin.jar
 file.reference.ojdbc14-10.2.0.4.jar=lib/ojdbc14-10.2.0.4.jar
@@ -232,7 +232,8 @@ javac.classpath=\
     ${file.reference.lgpl-utils-1.0.6-020610.jar}:\
     ${file.reference.openrdf-sesame-2.3.0-onejar.jar}:\
     ${reference.SWBBigDataInt.jar}:\
-    ${reference.ITZModel.jar}
+    ${reference.SWBTripleStoreMongo.jar}:\
+    ${file.reference.mongo-2.7.0.jar}
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}
 # Space-separated list of extra javac options
@@ -267,7 +268,6 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 no.dependencies=true
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.ITZModel=../../proys/ver/ITZModel
 project.SWB3Resources=SWB3Resources
 project.SWBAdmin=SWBAdmin
 project.SWBBase=SWBBase
@@ -288,9 +288,9 @@ project.SWBSemanticFileRepository=SWBSemanticFileRepository
 project.SWBSIP=SWBSIP
 project.SWBTOWB3Compatibility=WB3Compatibility
 project.SWBTripleStore=SWBTripleStore
+project.SWBTripleStoreMongo=SWBTripleStoreMongo
 project.SWBXMLRPCCommon=../Client/XMLRPCCommon
 project.SWBXMRPCServer=../Client/XMRPCServer
-reference.ITZModel.jar=${project.ITZModel}/dist/ITZModel.jar
 reference.SWB3Resources.jar=${project.SWB3Resources}/dist/SWB3Resources.jar
 reference.SWBAdmin.jar=${project.SWBAdmin}/dist/SWBAdmin.jar
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
@@ -311,6 +311,7 @@ reference.SWBSemanticFileRepository.jar=${project.SWBSemanticFileRepository}/dis
 reference.SWBSIP.jar=${project.SWBSIP}/dist/SWBSIP.jar
 reference.SWBTOWB3Compatibility.jar=${project.SWBTOWB3Compatibility}/dist/SWBTOWB3Compatibility.jar
 reference.SWBTripleStore.jar=${project.SWBTripleStore}/dist/SWBTripleStore.jar
+reference.SWBTripleStoreMongo.jar=${project.SWBTripleStoreMongo}/dist/SWBTripleStoreMongo.jar
 reference.SWBXMLRPCCommon.jar=${project.SWBXMLRPCCommon}/dist/SWBXMLRPCCommon.jar
 reference.SWBXMRPCServer.jar=${project.SWBXMRPCServer}/dist/SWBXMRPCServer.jar
 resource.dir=setup
