--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -138,21 +138,27 @@ swb/accessLogTime=300
 #***           - swbts      (Base de datos, optimizada para SWB)
 #***           - swbrts     (base de datos remota, s\u00f3lo en clientes, se usa en conjunci\u00f3n con swbts en el Admin)
 #***           - bigdata    (BigData, requiere incorporar bibliotecas de BigData y Sesame)
+#***           - swbtsmongo (Base de datos MongoDB)
 #***********************************************************
 swb/triplepersist=swbts
 
-#Direcci\u00f3n IP del servidor remoto para swbrts
+#Direcci\u00f3n IP del servidor remoto para swbrts y mongo
 swb/tripleremoteserver=localhost
 
-#Puerto del servidor remoto para swbrts
-swb/tripleremoteport=6666
+#Puerto del servidor remoto para swbrts y mongo
+#swb/tripleremoteport=6666
+#swb/tripleremoteport=27017
+
+#Nombre de la base de datos a usar con ts mongo
+#swb/mongodbname=swb
+
 
 #triple store statements cache (solo se usa una conecci\u00f3n a DB)
 #se recomienda desactivarlo en produccion
 #swb/ts_statementsCache=false
 
 #Se carga toda la base de datos a memoria para mejorar rendimiento de DB
-swb/tripleFullCache=true
+swb/tripleFullCache=false
 
 #old resource versions support
 swb/oldResourcesSupport=false
