--- a/SWB4/swb/SWBPortlet-shared/nbproject/project.properties
+++ b/SWB4/swb/SWBPortlet-shared/nbproject/project.properties
@@ -25,15 +25,17 @@ dist.jar=${dist.dir}/SWBPortlet-shared.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsp-api.jar=../lib/jsp-api.jar
 file.reference.portlet-api-2.0.jar=../lib/portlet-api-2.0.jar
 file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.portlet-api-2.0.jar}:\
-    ${file.reference.servlet-api.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${reference.SWBModel.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${reference.SWBModel.jar}:\
+    ${file.reference.jsp-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
