--- a/SWB4/swb/SWBPortlet/nbproject/project.properties
+++ b/SWB4/swb/SWBPortlet/nbproject/project.properties
@@ -25,7 +25,9 @@ dist.jar=${dist.dir}/SWBPortlet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsp-api.jar=../lib/jsp-api.jar
 file.reference.portlet-api-2.0.jar=..\\lib\\portlet-api-2.0.jar
+file.reference.servlet-api.jar=../lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -34,7 +36,9 @@ javac.classpath=\
     ${reference.SWBPortal.jar}:\
     ${reference.SWBPortlet-shared.jar}:\
     ${reference.SWBModel.jar}:\
-    ${reference.SWBPlatform.jar}
+    ${reference.SWBPlatform.jar}:\
+    ${file.reference.jsp-api.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
