--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -157,8 +157,11 @@ swb/tripleremoteserver=localhost
 #se recomienda desactivarlo en produccion
 #swb/ts_statementsCache=false
 
-#Se carga toda la base de datos a memoria para mejorar rendimiento de DB
+#Se carga todos los triples de la base de datos a memoria para mejorar rendimiento de DB.
 swb/tripleFullCache=false
+
+#Se carga toda semanticobjects a memoria.
+swb/semanticObjectsFullCache=true
 
 #old resource versions support
 swb/oldResourcesSupport=false
