--- a/SWB4/swb/SWBTripleStore/nbproject/project.properties
+++ b/SWB4/swb/SWBTripleStore/nbproject/project.properties
@@ -29,6 +29,7 @@ file.reference.arq-extra.jar=../lib/arq-extra.jar
 file.reference.bigdata-1.0.1.jar=../lib_bigdata/bigdata-1.0.1.jar
 file.reference.colt-1.2.0.jar=../lib_bigdata/colt-1.2.0.jar
 file.reference.commons-logging-1.1.1.jar=../lib/commons-logging-1.1.1.jar
+file.reference.commons-pool-1.5.6.jar=../lib/commons-pool-1.5.6.jar
 file.reference.concurrent.jar=../lib/concurrent.jar
 file.reference.ctc_utils-5-4-2005.jar=../lib_bigdata/ctc_utils-5-4-2005.jar
 file.reference.cweb-extser-0.1-b2-dev.jar=../lib_bigdata/cweb-extser-0.1-b2-dev.jar
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.jena-2.6.3-sources.jar}:\
     ${file.reference.jena-2.6.3.jar}:\
     ${file.reference.gnu-crypto.jar}:\
-    ${reference.SWBPlatform.jar}
+    ${reference.SWBPlatform.jar}:\
+    ${file.reference.commons-pool-1.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
