--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.commons-io-1.3.jar=lib/commons-io-1.3.jar
 file.reference.commons-jxpath-1.2-chiba-patched.jar=lib/commons-jxpath-1.2-chiba-patched.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-logging.jar-1=lib/commons-logging.jar
+file.reference.commons-pool-1.5.6.jar=lib/commons-pool-1.5.6.jar
 file.reference.concurrent.jar=lib/concurrent.jar
 file.reference.ctc_utils-5-4-2005.jar=lib_bigdata/ctc_utils-5-4-2005.jar
 file.reference.cweb-extser-0.1-b2-dev.jar=lib_bigdata/cweb-extser-0.1-b2-dev.jar
@@ -234,7 +235,8 @@ javac.classpath=\
     ${file.reference.openrdf-sesame-2.3.0-onejar.jar}:\
     ${reference.SWBBigDataInt.jar}:\
     ${reference.SWBTripleStoreMongo.jar}:\
-    ${file.reference.mongo-2.7.0.jar}
+    ${file.reference.mongo-2.7.0.jar}:\
+    ${file.reference.commons-pool-1.5.6.jar}
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}
 # Space-separated list of extra javac options
