--- a/SWB4/swb/SWBProcess/nbproject/project.properties
+++ b/SWB4/swb/SWBProcess/nbproject/project.properties
@@ -49,7 +49,7 @@ file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.velocity.jar=../../swbp/libext/velocity.jar
 file.reference.xmlbeans-2.3.0.jar=..\\lib\\xmlbeans-2.3.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBPlatform.jar}:\
