--- a/SWB4/swbp/src/web.properties
+++ b/SWB4/swbp/src/web.properties
@@ -37,7 +37,7 @@ swb/security.auth.login.config=/jaas.config
 swb/ExternalParamList=code
 
 #Path de trabajo fuera de webapp local
-#swb/workPath=file:E:/programming/proys/WB2/wb2/work
+#swb/workPath=file:/otro/work
 swb/workPath=/work
 #Path de trabajo para Web
 swb/webWorkPath=/work
