--- a/SWB4/swbp/src/web.properties
+++ b/SWB4/swbp/src/web.properties
@@ -24,7 +24,7 @@ swb/defaultConnectTimeout=5000
 #property sun.net.client.defaultReadTimeout milisegundos
 swb/defaultReadTimeout=30000
 #Ruta del archivo owl que se usa de base
-swb/ontologyFiles=/WEB-INF/owl/swb.owl,/WEB-INF/owl/swb_rep.owl,/WEB-INF/owl/office.owl,/WEB-INF/owl/ext/swp.owl,/WEB-INF/owl/ext/swp_test.owl,/WEB-INF/owl/ext/cfe_po.owl,/WEB-INF/owl/ext/APP.owl
+swb/ontologyFiles=/WEB-INF/owl/swb.owl,/WEB-INF/owl/swb_rep.owl,/WEB-INF/owl/office.owl,/WEB-INF/owl/ext/swp.owl,/WEB-INF/owl/ext/swp_demo.owl
 #swb/ontologyFiles=/WEB-INF/owl/swb.owl,/WEB-INF/owl/swb_rep.owl,/WEB-INF/owl/office.owl,/WEB-INF/owl/community.owl,/WEB-INF/owl/swb_proy.owl,/WEB-INF/owl/swp.owl,/WEB-INF/owl/swp_test.owl
 #agregar o no el modelo de DBPedia
 #swb/addModel_DBPedia=true
