--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/kpi/ProcessKPI.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/kpi/ProcessKPI.properties
@@ -18,3 +18,5 @@ instanceTitle = Instancias de proceso
 closed=Conclu\u00eddos
 active=Activos
 aborted=Abortados
+msgError1=No existen instancias del proceso
+MsgError2=No se ha podido obtener el proceso
