--- a/SWB4/swb/SWBProcess/nbproject/project.properties
+++ b/SWB4/swb/SWBProcess/nbproject/project.properties
@@ -28,6 +28,7 @@ excludes=
 file.reference.arq-2.8.5.jar=../lib/arq-2.8.5.jar
 file.reference.arthurdo.jar=..\\lib\\arthurdo.jar
 file.reference.bsh-core-2.0b4.jar=..\\lib\\bsh-core-2.0b4.jar
+file.reference.commons-jexl-2.0.1.jar=../lib/commons-jexl-2.0.1.jar
 file.reference.fr.opensagres.xdocreport.converter.jar=../../swbp/libext/fr.opensagres.xdocreport.converter.jar
 file.reference.fr.opensagres.xdocreport.core.jar=../../swbp/libext/fr.opensagres.xdocreport.core.jar
 file.reference.fr.opensagres.xdocreport.document.docx.jar=../../swbp/libext/fr.opensagres.xdocreport.document.docx.jar
@@ -40,9 +41,10 @@ file.reference.jasperreports-3.7.0.jar=../lib/jasperreports-3.7.0.jar
 file.reference.jena-2.6.3.jar=../lib/jena-2.6.3.jar
 file.reference.jfreechart-1.0.13.jar=../lib/jfreechart-1.0.13.jar
 file.reference.json.jar=..\\lib\\json.jar
+file.reference.jxls-core-1.0-RC-3.jar=../lib/jxls-core-1.0-RC-3.jar
 file.reference.oro.jar=../../swbp/libext/oro.jar
-file.reference.poi-3.7-20101029.jar=..\\lib\\poi-3.7-20101029.jar
-file.reference.poi-ooxml-3.7-20101029.jar=..\\lib\\poi-ooxml-3.7-20101029.jar
+file.reference.poi-3.7-20101029.jar=../lib/poi-3.7-20101029.jar
+file.reference.poi-ooxml-3.7-20101029.jar=../lib/poi-ooxml-3.7-20101029.jar
 file.reference.poi-ooxml-schemas-3.7-20101029.jar=..\\lib\\poi-ooxml-schemas-3.7-20101029.jar
 file.reference.poi-scratchpad-3.7-20101029.jar=..\\lib\\poi-scratchpad-3.7-20101029.jar
 file.reference.servlet-api.jar=../lib/servlet-api.jar
@@ -66,6 +68,8 @@ javac.classpath=\
     ${file.reference.arthurdo.jar}:\
     ${file.reference.arq-2.8.5.jar}:\
     ${file.reference.fr.opensagres.xdocreport.converter.jar}:\
+    ${file.reference.poi-ooxml-3.7-20101029.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}:\
     ${file.reference.fr.opensagres.xdocreport.core.jar}:\
     ${file.reference.fr.opensagres.xdocreport.document.docx.jar}:\
     ${file.reference.fr.opensagres.xdocreport.document.jar}:\
@@ -73,7 +77,9 @@ javac.classpath=\
     ${file.reference.fr.opensagres.xdocreport.template.velocity.jar}:\
     ${file.reference.oro.jar}:\
     ${file.reference.velocity.jar}:\
-    ${reference.SWBWebServices.jar}
+    ${reference.SWBWebServices.jar}:\
+    ${file.reference.jxls-core-1.0-RC-3.jar}:\
+    ${file.reference.commons-jexl-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
