--- a/SWB4/swb/applets/SWBAplXSLEditor/nbproject/project.properties
+++ b/SWB4/swb/applets/SWBAplXSLEditor/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.jar=${dist.dir}/SWBAplXSLEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.rsyntaxtextarea.jar=..\\..\\lib\\rsyntaxtextarea.jar
+file.reference.rsyntaxtextarea.jar=../../SWBAdmin/src/swbadmin/lib/rsyntaxtextarea.jar
 includes=**
 jar.compress=false
 javac.classpath=\
