--- a/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess.properties
+++ b/SWB4/swb/SWBProcess/src/org/semanticwb/process/resources/SWBAScheduleProcess.properties
@@ -38,7 +38,7 @@ frmSaturday=S&aacute;bado
 
 frmMonthly=Mensual
 
-frmTheDay=El d&iacute;a
+frmTheDay=Del d&iacute;a
 
 frmOfEvery=de cada
 
@@ -129,3 +129,4 @@ statmsg4=Se elimino calendarizacion.
 frmInterval=Intervalo (min)
 frmTimeInterval=Intervalo de tiempo
 frmTemporizador=Tiempo de espera (min)
+frmTheDayTo=al
