--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/catalog/SWBCatalogResource.properties
@@ -2,7 +2,7 @@
 # and open the template in the editor.
 
 Save_config=Guardar
-Add_Instance=Agregar Instancia
+Add_Instance=Agregar
 frmBusqueda=B\u00fasqueda
 btnBack=Regresar
 booleanYes=S\u00ed
@@ -13,7 +13,7 @@ confirm_remove=\u00bfEst\u00e1s seguro de eliminar el elemento
 documentAdmin=Administraci\u00f3n del elemento
 statmsg1=Se agrego correctamente el elemento.
 statmsg2=Se elimin\u00f3 correctamente el elemento.
-searchInProperties=Buscar en propiedades seleccionadas
+searchInProperties=Buscar
 btnReload=Recargar
 erroMsgConfig=Error en la configuraci\u00f3n del catalogo
 msgMissingConfigClass=Falta configurar y/o seleccionar la clase de la colecci\u00f3n
