--- a/SWB4/swb/SWBJSR283Model/nbproject/project.properties
+++ b/SWB4/swb/SWBJSR283Model/nbproject/project.properties
@@ -36,8 +36,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -55,7 +55,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
-platform.active=JDK_1.5
+mkdist.disabled=false
+platform.active=default_platform
 project.SWBBase=../SWBBase
 project.SWBModel=../SWBModel
 project.SWBPlatform=../SWBPlatform
