--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement.properties
@@ -1,10 +1,7 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
 lblComments=Comentarios
 add=Agrega tu comentario
 nameLabel=Nombre completo
-emailLabel=Tu correo electr\u00f3nico v\u00e1lido
+emailLabel=Correo electr\u00f3nico
 publish=Publicar comentario
 comment=Comentario
 msgEditorial=Aviso: Esta herramienta tiene la finalidad de permitir el intercambio de ideas de manera responsable, por este motivo nos reservamos el derecho de remover o editar comentarios de contenido obsceno, injurioso, pornogr\u00e1fico o sin relaci\u00f3n al tema publicado.
@@ -13,3 +10,5 @@ anotherCode=Generar otro c\u00f3digo
 writeAtLabel=escribi\u00f3 el
 msgWrongCode=El c\u00f3digo de seguridad es incorrecto. En caso de no ser claro c\u00e1mbialo haciendo clic en <<Generar otro c\u00f3digo>>.
 msgLoggInFirst=Si desea realizar comentarios sobre esta informaci&oacute;n deber&aacute; firmarse primero, gracias.
+noElement=No existe un elemento para comentar
+ago=Hace
