--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/SWBCommentToElement.properties
@@ -10,5 +10,7 @@ anotherCode=Generar otro c\u00f3digo
 writeAtLabel=escribi\u00f3 el
 msgWrongCode=El c\u00f3digo de seguridad es incorrecto. En caso de no ser claro c\u00e1mbialo haciendo clic en <<Generar otro c\u00f3digo>>.
 msgLoggInFirst=Si desea realizar comentarios sobre esta informaci&oacute;n deber&aacute; firmarse primero, gracias.
-noElement=No existe un elemento para comentar
+noElement=No existe elemento para comentar
 ago=Hace
+noComment=No hay comentarios
+viewAllComments=Ver todos los comentarios
