--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion.properties
@@ -6,3 +6,5 @@ lblDoAdminSelectOne=Seleccionar
 lblDoAdminSave=Guardar
 lblDoAdminReset=Restablecer
 msgDoViewSeeMore=Ver m\u00e1s
+msgDoViewMorePodcasts=M\u00e1s podcasts
+msgDoViewNoPodcast=Sin podcasts
