--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios.properties
@@ -6,3 +6,5 @@ lblDoAdminSelectOne=Seleccionar
 lblDoAdminSave=Guardar
 lblDoAdminReset=Restablecer
 msgDoViewSeeMore=Ver m\u00e1s
+msgDoViewMostLiked=Lo m\u00e1s gustado
+msgDoViewNoPodcast=Sin podcasts
