--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
@@ -1,2 +1,9 @@
-title=Reservar sala de juntas
-
+usrmsg_doView_titleLbl=Reservar sala de juntas
+usrmsg_doAdmin_resourceUpdatedMsg=Se actualiz\u00f3 exitosamente el recurso con identificador
+usrmsg_doAdmin_EditionLbl=Rol/Grupo de usuarios para edici\u00f3n
+usrmsg_doAdmin_rolesLbl=Roles
+usrmsg_doAdmin_userGroupsLbl=Grupo de usuarios
+usrmsg_doAdmin_rolesNotFoundMsg=No se encontraron roles
+usrmsg_doAdmin_saveLbl=Guardar
+usrmsg_doAdmin_resetLbl=Restablecer
+usrmsg_doAdmin_noRequiredLbl=No es requerido
