--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/FavoriteAudios.properties
@@ -8,3 +8,7 @@ lblDoAdminReset=Restablecer
 msgDoViewSeeMore=Ver m\u00e1s
 msgDoViewMostLiked=Lo m\u00e1s gustado
 msgDoViewNoPodcast=Sin podcasts
+lblDoViewBy=Por
+lblDoViewListen=Escuchar
+lblDoViewDownload=Descargar
+lblDoViewFormat=formato
