--- a/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion.properties
+++ b/swbproys/portalInfotec/infotec/src/com/infotec/swb/resources/AudioPromotion.properties
@@ -8,3 +8,7 @@ lblDoAdminReset=Restablecer
 msgDoViewSeeMore=Ver m\u00e1s
 msgDoViewMorePodcasts=M\u00e1s podcasts
 msgDoViewNoPodcast=Sin podcasts
+lblDoViewBy=Por
+lblDoViewListen=Escuchar
+lblDoViewDownload=Descargar
+lblDoViewFormat=formato
