--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -101,19 +101,27 @@ af/adminEmail=webbuilder@infotec.com.mx
 #Periodo de tiempo en segundos entre cada sincronizaci\u00f3n con db
 swb/syncTime=10
 
+#IP local para el envio de mensajes de sincronizacion
+swb/localMessageAddress=localhost:1500
+#IP de la maquina configurada como servidor para el envio de mensajes de sincronizacion
+swb/serverMessageAddress=localhost:1500
+
+#Parametros Depreciados
+#************************************************
 #IP address utilizado para el envi\u00f3 y recepci\u00f3n de mensajes...
-swb/MessageIPAddr=localhost
+#swb/MessageIPAddr=localhost
 #Puerto UDP de envi\u00f3 de mensajes de sincronizaci\u00f3n entre servidores...
 #este es en el caso de no definir wb/sendMessageIPAddrs
 #se utiliza este puerto y se env\u00eda a broadcast
-swb/sendMessagePort=1500
+#swb/sendMessagePort=1500
 #Direcci\u00f3n para el envi\u00f3 de mensajes de sincronizaci\u00f3n entre servidores
 #se especifica: [direcci\u00f3n IP]:[puerto]; [direcci\u00f3n IP]:[puerto]
 #en caso de no utilizar una direcci\u00f3n broadcast se tiene que incluir la direcci\u00f3n
 #de la misma maquina
-swb/sendMessageIPAddrs=localhost:1500, localhost:1501
+#swb/sendMessageIPAddrs=localhost:1500, localhost:1501
 #Puerto UDP de recepci\u00f3n de mensajes de sincronizaci\u00f3n entre servidores...
-swb/reciveMessagePort=1500
+#swb/reciveMessagePort=1500
+#************************************************
 
 #ruta de log de Acceso de WebBuilder
 swb/accessLog=/logs/wb_log
