--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Eworkplace
+application.vendor=juan.fernandez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,6 +24,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Eworkplace.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=lib\\commons-fileupload-1.2.1.jar
 file.reference.jena-2.6.3.jar=lib\\jena-2.6.3.jar
@@ -64,6 +65,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
+no.dependencies=true
 platform.active=default_platform
 project.SWBBase=../../SWB4/swb/SWBBase
 project.SWBCommunity=../../SWB4/swb/SWBCommunity
