--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -47,3 +47,9 @@ msgErrUserAlreadyExists=msgErrUserAlreadyExists
 
 msgSubject=msgSubject
 
+usrmsg_Admin_msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
+usrmsg_Admin_Data=Datos
+usrmsg_Admin_RollGroup=Role/UserGroup para edici\u00f3n
+usrmsg_Admin_ListMessage=Ninguno
+usrmsg_Admin_btnGuardar=Guardar
+usrmsg_Admin_btnReset=Restablecer
